[package]
name = "contract"
version = "0.1.0"
edition = "2021"



[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false


[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[features]
library = []


[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_1_4",
  "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
prost = "0.13.3"  # Protobuf support
prost-types = "0.13"
fairblock-proto = { git = "https://github.com/Fairblock/fairblock-rust/", branch = "main", default-features = false }
